--- a/assets/style.css
+++ b/assets/style.css
@@ -77,12 +77,12 @@ header img {
     width: 100px;
     height: 100px;
     object-fit: cover;
-    border: solid;
+    border: solid 3px;
     border-radius: 50%;
     margin: 20px 20px;
     border-color: #ffffff;
     margin-left: 60px;
-    margin-top: 35px;
+    margin-top: 50px;
 
 
 }
