--- a/assets/style.css
+++ b/assets/style.css
@@ -34,7 +34,6 @@ body {
     width: 80%;
     background-color: #ffffff;
     padding: 0px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
     text-align: center;
 }
 
@@ -48,30 +47,41 @@ body {
     text-align: center;
     margin-left: 10px;
 }
-
-address{
+address.contact-info{
     margin-top: 0px;
-    margin-bottom: 20px;
-    padding: 0;
+    padding-top: 0px;
 }
-/* address ul{
+
+.gauche{
+    text-align: left;
+}
+
+.contact-info{
     display: flex;
-} */
-.permis{
+    justify-content: center;
+    gap: 2rem;
+    background-color: #17abb3;
+    padding: 1rem;
+    color: #ffffff;
     font-family: "raleway";
     font-size: 0.8em;
+    flex-wrap: wrap;
+  }
+  
+  .contact-info p {
+    /* margin: 0.5rem 0; */
+    margin-top: 0px;
+    padding-top: 0px;
+  }
+  
+  .contact-info a {
     color: #ffffff;
-    font-style: normal;
-}
-
-address a {
-    font-family: "raleway";
-    font-size: 0.8em;
-    color: #ffffff;
-    font-style: normal;
     text-decoration: none;
-
-}
+  }
+  
+  .contact-info a:hover {
+    text-decoration: underline;
+  }  
 
 header img {
     width: 100px;
@@ -82,7 +92,7 @@ header img {
     margin: 20px 20px;
     border-color: #ffffff;
     margin-left: 60px;
-    margin-top: 50px;
+    margin-top: 40px;
 
 
 }
@@ -142,7 +152,6 @@ h2 {
 
 h3 {
     color: #ffffff;
-    /* text-align: center; */
     margin: 5px;
     font-family: "lato";
 }
@@ -155,7 +164,7 @@ ul {
 
 li::before {
     content: "■";
-    color: #17abb3;    /* couleur du carré */
+    color: #17abb3;
     display: inline-block;
     margin-right: 1em;
 }
@@ -182,9 +191,6 @@ ul.reseaux{
     display: inline-flex;
     align-items: center;
     gap: 25px;
-    /* display: flex
-;
-    justify-content: center; */
 }
 
 .date {
